[project]
name = "interviews"
dynamic = ["version"]
description = "Interview prep for data structures and algorithms"
readme = "README.md"
# requires-python = ">=3.7"  # TODO
license = {file = "LICENSE.txt"}
authors = [{name = "Richard Harris"}]
maintainers = [{name = "Richard Harris"}]

dependencies = []

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["interviews"]
package-data = {}

[tool.setuptools_scm]
version_file = "interviews/_version.py"

# Linting

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
ignore_missing_imports = true
warn_unused_configs = true

[pytest]
asyncio_mode = "auto"
